inst/css/custom.css
/* teal custom css */

/* per tag */

body:not(.modal-open) {
  padding-right: 0 !important;
  overflow: auto !important;
}

/* teal_data_module modal styling */
body > div:has(~ #shiny-modal-wrapper .fade .blur_background) {
  transition: filter 0.3s;
}

body > div:has(~ #shiny-modal-wrapper .blur_background) {
  filter: blur(5px);
}

#shiny-modal.fade.in:has(.hide_background) {
  transition: background-color 0.3s;
}

#shiny-modal:has(.hide_background) {
  background-color: white;
}

.btn {
  --bs-btn-padding-x: 0.7em;
  --bs-btn-padding-y: 0.4em;
}

:root {
  --bs-body-font-size: 0.875rem;
}

.accordion-button {
  font-size: 0.875rem;
  font-weight: bold;
}

.teal-body .tabbable > .nav-pills {
  width: calc(100% - 5rem);
}

.teal.bookmark-popup .modal-body {
  padding: 0 1.5rem;
}

.modal-dialog:has(.teal-filter-manager-modal) {
  width: fit-content;
}

